src/objects/PublishResult__c.object
<CustomObject>
    <description>This Object will hold the all Published platform events details</description>
    <fields>
        <fullName>CPU_Processing_Status__c</fullName>
        <description>Silk route:This will hold the Case CPU Processing Status values</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CPU Processing Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Silk route: If service fail that error message will capture at this field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventUid__c</fullName>
        <description>Silk route: Case id or associated Object id capture at this place</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EventUid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionId__c</fullName>
        <description>Silk route: This will hold the case associated Interaction Id value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interaction ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplayId__c</fullName>
        <description>Silk route: Platform event unique number hold at this place</description>
        <label>ReplayId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <description>Silk route: This will hold the Status code of Service</description>
        <encryptionScheme>None</encryptionScheme>
        <label>StatusCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Silk route: Which will hold the Case status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Silk route: Status value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PublishResult</label>
    <nameField>
        <displayFormat>PBR-{0000}</displayFormat>
        <label>PublishResult Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PublishResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>